# bobi_msgs

./: CMakeLists.txt  package.xml
msg/: DLISpecs.msg  DroppedMessages.msg  KickSpecs.msg  MotorVelocities.msg  MotorVelocitiesStamped.msg  NumAgents.msg  Pose.msg  PoseStamped.msg  PoseVec.msg  TargetPose.msg  Temperature.msg  TemperatureSensors.msg
srv/: BacIntervene.srv  ConvertCoordinates.srv  DutyCycle.srv  GetNumAgents.srv  MaxAcceleration.srv
